--- a/src/components/modules/HttpRequestForm/index.less
+++ b/src/components/modules/HttpRequestForm/index.less
@@ -1,11 +1,12 @@
+@pad: 5px;
 .container {
   display: flex;
   :global {
     .ant-select {
-      margin-right: 10px;
+      margin-right: @pad;
     }
     .ant-btn {
-      margin-left: 10px;
+      margin-left: @pad;
     }
   }
 }
