--- a/src/styles/vendor.less
+++ b/src/styles/vendor.less
@@ -1,1 +1,3 @@
 @global-import '../../node_modules/antd/dist/antd.css';
+@global-import '../../node_modules/codemirror/lib/codemirror.css';
+@global-import '../../node_modules/codemirror/theme/material.css';
