--- a/src/styles/vendor.less
+++ b/src/styles/vendor.less
@@ -1,3 +1,4 @@
 @global-import '../../node_modules/antd/dist/antd.css';
+//@global-import '../../node_modules/antd/dist/antd.dark.css'; 
 @global-import '../../node_modules/codemirror/lib/codemirror.css';
 @global-import '../../node_modules/codemirror/theme/material.css';
