code editor settings / lazy load editor bindings

--- a/src/styles/vendor.less
+++ b/src/styles/vendor.less
@@ -2,3 +2,6 @@
 //@global-import '../../node_modules/antd/dist/antd.dark.css'; 
 @global-import '../../node_modules/codemirror/lib/codemirror.css';
 @global-import '../../node_modules/codemirror/theme/material.css';
+@global-import '../../node_modules/codemirror/theme/monokai.css';
+@global-import '../../node_modules/codemirror/theme/dracula.css';
+@global-import '../../node_modules/codemirror/theme/solarized.css';
