--- a/src/styles/vendor.less
+++ b/src/styles/vendor.less
@@ -1,5 +1,7 @@
 @global-import '../../node_modules/antd/dist/antd.css';
 //@global-import '../../node_modules/antd/dist/antd.dark.css'; 
+@global-import '../../node_modules/codemirror/addon/lint/lint.css';
+@global-import '../../node_modules/codemirror/addon/hint/show-hint.css';
 @global-import '../../node_modules/codemirror/lib/codemirror.css';
 @global-import '../../node_modules/codemirror/theme/material.css';
 @global-import '../../node_modules/codemirror/theme/monokai.css';
