--- a/src/domains/code-editor/components/index.less
+++ b/src/domains/code-editor/components/index.less
@@ -5,3 +5,12 @@
     }
   }
 }
+.container {
+  position: relative;
+}
+.extra {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  z-index: 10;
+}
