--- a/app/src/styles/antd/dark-theme.less
+++ b/app/src/styles/antd/dark-theme.less
@@ -2,7 +2,7 @@
 @import "~antd/dist/antd.less";
 @import "~antd/lib/style/themes/dark.less";
 
-@primary-color: #00adb5;
+@primary-color: #9254de;
 @border-radius-base: 4px;
 
 @component-background: #303030;
