--- a/app/src/styles/antd/light-theme.less
+++ b/app/src/styles/antd/light-theme.less
@@ -3,5 +3,5 @@
 @import '~antd/lib/style/themes/default.less';
 
 // These are shared variables that can be extracted to their own file
-@primary-color: #00adb5;
+@primary-color: #5c27fe;
 @border-radius-base: 4px;
